--- a/Scatterplots_AWdataprep.Rmd
+++ b/Scatterplots_AWdataprep.Rmd
@@ -1,3 +1,22 @@
+---
+title: "Scatterplots_AWdataprep"
+author: "Bongai Simango"
+date: "24/01/2019"
+output:
+  pdf_document: default
+  html_document:
+    df_print: paged
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+## R Markdown
+
+
+
+```{r}
 # Created by Bo Simango
 # M.Sc. candidate 
 # Supervisor: Dr. Daniel Fuller
@@ -8,17 +27,26 @@
 
 # First install knitr library
 # Knitr allows you to manipulate data 
+```
 
+```{r}
 library(knitr)
-
-# Set working directory
-setwd("H:/My Documents/Desktop/Thesis")
-applewatch <- read.csv("health-data-Default.csv")
-
-# Read Health Data Collector App data 
 library(haven)
-applewatch <- read.csv("health-data-Default.csv")
+library(ggplot2)
+```
 
+```{r}
+# Set working directory
+setwd("C:/Thesis")
+applewatch <- read.csv("health-data-Default.csv")
+```
+
+```{r}
+# Read Health Data Collector App data 
+applewatch <- read.csv("health-data-Default.csv")
+```
+
+```{r}
 # Summary of statistical descriptives of each variable 
 summary(applewatch)
 summary(applewatch$DateTime)
@@ -26,45 +54,43 @@ summary(applewatch$Heart)
 summary(applewatch$Calories)
 summary(applewatch$Steps)
 summary(applewatch$Distance)
+```
 
+```{r}
 #Scatterplot of Heart rate vs. Time 
-library(ggplot2)
 scatter<- ggplot(applewatch, aes(x = DateTime, y = Heart)) + 
   geom_point() +
   xlab("Date and Time")+
   ylab("Heart rate")
   plot(scatter)
+```
   
+```{r}
 #Scatterplot of Calories vs. Time 
-library(ggplot2)  
   scatter<- ggplot(applewatch, aes(x = DateTime, y = Calories)) + 
     geom_point() +
     xlab("Date and Time")+
     ylab("Calories")
   plot(scatter)  
-  
+```
+
+```{r}
 #Scatterplot of Steps vs. Time 
-  library(ggplot2)
   scatter<- ggplot(applewatch, aes(x = DateTime, y = Steps)) + 
     geom_point() +
     xlab("Date and Time")+
     ylab("Steps")
   plot(scatter)  
+```
 
+```{r}
 #Scatterplot of Distance vs. Time 
-  library(ggplot2)
   scatter<- ggplot(applewatch, aes(x = DateTime, y = Distance)) + 
     geom_point() +
     xlab("Date and Time")+
     ylab("Distance")
   plot(scatter)  
-  
-#Scatterplot of Distance vs. Time with color 
-  library(ggplot2)
-  scatter<- ggplot(applewatch, aes(x = Heart, y = Distance)) + 
-    geom_point(aes(colour = factor(DateTime)), alpha = 1/5) +
-    xlab("Date and Time")+
-    ylab("Distance")
-  plot(scatter_cat)    
-  
+```
+
+
   
